--- a/looker-app/.env
+++ b/looker-app/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE_API_URL= http://192.168.68.119:5000/api/v1/
+REACT_APP_BASE_API_URL= https://looker-api-3y18.onrender.com/api/v1/
 REACT_APP_BASE_MAP_API_KEY= gAtNSepJNEfyMqVA5zCF
 
