--- a/looker-app/package.json
+++ b/looker-app/package.json
@@ -6,6 +6,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@mui/icons-material": "^5.10.9",
+    "formik-material-ui": "^4.0.0-alpha.2",
+    "uuid": "^9.0.0",
     "@mui/material": "^5.10.12",
     "@mui/styled-engine": "^5.10.8",
     "@react-google-maps/api": "^2.13.1",
@@ -27,6 +30,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
