--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE_API_URL= https://looker-api-3y18.onrender.com/api/v1/
-REACT_APP_BASE_MAP_API_KEY= gAtNSepJNEfyMqVA5zCF
+REACT_APP_BASE_API_URL= https://api.adembc.live/api/v1
+REACT_APP_BASE_NODE_ENV= production
 
